School graduations card

--- a/app/assets/stylesheets/_round_container.scss
+++ b/app/assets/stylesheets/_round_container.scss
@@ -1,114 +1,66 @@
 .round-container {
-  border: solid 1px red;
-  width: 450px;
-  height: 450px;
+  position: relative;
+  width: 400px; /* Ajustez la largeur du conteneur selon vos besoins */
+  height: 400px; /* Ajustez la hauteur du conteneur selon vos besoins */
+  // border: solid 1px #ccc;
+  border-radius: 50%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
-.round-container h2 {
-  font-family: 'Work Sans', sans-serif;
+.round {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #0077b6;
+  position: absolute;
 }
 
-
-.round-container h4 {
+.round p {
   text-align: center;
+  word-wrap: break-word;
 }
 
 .round-1 {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background-color: #0077b6;
-  top: 0;
+  top: 50%;
+  left: 2%;
+  transform: translate(-50%, -50%);
 }
 
 .round-2 {
-  border-radius: 50%;
-  background-color: #0077b6;
-  width: 60px;
-  height: 60px;
+  top: 14%;
+  left: 26%;
+  transform: translate(-50%, -50%);
 }
 
 .round-3 {
-  border-radius: 50%;
-  background-color: #0077b6;
-  width: 60px;
-  height: 60px;
-  // position: absolute;
-  top: 250px;
-  left:800px;
+  top: 14%;
+  left: 74%;
+  transform: translate(-50%, -50%);
 }
 
-
 .round-4 {
-  border-radius: 50%;
-  background-color: #0077b6;
-  width: 60px;
-  height: 60px;
-  // position: absolute;
-  top: 400px;
-  left:700px;
+  top: 50%;
+  left: 98%;
+  transform: translate(-50%, -50%);
 }
 
 .round-5 {
-  border-radius: 50%;
-  background-color: #0077b6;
-  width: 60px;
-  height: 60px;
-  // position: absolute;
-  top: 350px;
-  left:650px;
+  top: 86%;
+  left: 74%;
+  transform: translate(-50%, -50%);
 }
 
 .round-6 {
-  border-radius: 50%;
-  background-color: #0077b6;
-  width: 60px;
-  height: 60px;
-  // position: absolute;
-  top: 150px;
-  left:800px;
+  top: 86%;
+  left: 26%;
+  transform: translate(-50%, -50%);
 }
 
-.round-7 {
-  border-radius: 50%;
-  background-color: #0077b6;
-  width: 60px;
-  height: 60px;
-  // position: absolute;
-  top: 400px;
-  left:300px;
-}
 
-.round-8 {
-  border-radius: 50%;
-  background-color: #0077b6;
-  width: 60px;
-  height: 60px;
-  // position: absolute;
-  top: 500px;
-  left:600px;
-}
 
-.round-1,
-.round-2,
-.round-4,
-.round-5,
-.round-6,
-.round-8 {
- transition: transform 0.2s ease-in-out;
-}
 
-.round-1:hover,
-.round-2:hover,
-.round-4:hover,
-.round-5:hover,
-.round-6:hover,
-.round-8:hover {
-  transform: scale(1.5);
-}
 
 
 
