--- a/app/assets/stylesheets/_card_formation.scss
+++ b/app/assets/stylesheets/_card_formation.scss
@@ -1,16 +1,79 @@
-.card-formation{
-  width: 230px;
-  height: 200px;
-  background-color: transparent;
-  border: solid 1px white;
-  margin: 12px;
+// .card-formation{
+//   width: 230px;
+//   height: 200px;
+//   background-color: transparent;
+//   border: solid 1px white;
+//   margin: 12px;
+
+// }
+
+
+// .image-container {
+//   border: solid 1px red;
+// }
+
+// .image-container img {
+//   width: auto;
+//   height: 100px;
+// }
+
+.card {
+  width: 190px;
+  height: 254px;
+  transition: all 0.2s;
+  position: relative;
+  cursor: pointer;
 }
 
-.image-container {
-  border: solid 1px red;
+.card-inner {
+  width: inherit;
+  height: inherit;
+  background: rgba(255,255,255,.05);
+  box-shadow: 0 0 10px rgba(0,0,0,0.25);
+  backdrop-filter: blur(10px);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.image-container img {
-  width: auto;
-  height: 100px;
+.card-inner p {
+  font-size: 32px;
+  font-weight: bold;
+  color: #0077b6;
+}
+
+.year {
+  font-size: 32px;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #0077b6;
+}
+
+.card:hover {
+  transform: scale(1.04) rotate(1deg);
+}
+
+.circle {
+  width: 90px;
+  height: 90px;
+  background: radial-gradient(#f3f6c5, #EBF8FC);
+  border-radius: 50%;
+  position: absolute;
+  animation: move-up6 4s ease-in infinite alternate-reverse;
+  color: black;
+
+}
+
+.circle:nth-child(1) {
+  top: 50%;
+  left: 45px;
+}
+
+@keyframes move-up6 {
+  to {
+    transform: translateY(-100px);
+  }
 }
