--- a/app/assets/stylesheets/_container.scss
+++ b/app/assets/stylesheets/_container.scss
@@ -18,12 +18,12 @@ body {
 }
 
 .container-technos {
-  background: linear-gradient(to right, transparent,  #0077b6,  transparent);
+  background: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
-  // border-bottom: solid 1px #0077b6;
-  // border-top: solid 1px #0077b6;
+  border-bottom: solid 1px #0077b6;
+  border-top: solid 1px #0077b6;
 }
 
 
@@ -46,7 +46,7 @@ body {
 .container3 {
   width: 100%;
   height: 600px;
-  background-image: url("https://images.unsplash.com/photo-1506318137071-a8e063b4bec0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTB8fHxlbnwwfHx8fHw%3D&w=1000&q=80");
+  // background-image: url("https://images.unsplash.com/photo-1506318137071-a8e063b4bec0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTB8fHxlbnwwfHx8fHw%3D&w=1000&q=80");
   background-size: cover;
   background-position: center;
   display: flex;
@@ -62,7 +62,10 @@ align-items: center;
 
 .container4 {
   display: flex;
-  justify-content: center;
+  margin: 64px;
+  text-align: center;
+  justify-content: space-around ;
   align-items: center;
-  margin: 12px;
 }
+
+
