Add about me section and change color of bubble

--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -14,31 +14,11 @@
   <div class="photo-lion">
     <img src="https://media.istockphoto.com/id/542197312/fr/photo/lion-en-noir-et-blanc.jpg?s=612x612&w=0&k=20&c=NGbnXO_5R2zarRb2L1vM1HWz0TNzblwXJ6NL8lckfck=" alt="image">
   </div>
-
 </div>
 
 <div class="container-technos">
-<h1>Dev formation</h1>
+<h1>About me</h1>
 </div>
-
-<div class="container3">
-  <div class="round-container">
-    <h2>Mes <span>Technos</span></h2>
-    <div class="round round-1"><p>HTML</p></div>
-    <div class="round round-2"><p>CSS</p></div>
-    <div class="round round-3"><p>Rails</p></div>
-    <div class="round round-4"><p>JavaScript</p></div>
-    <div class="round round-5"><p>Ruby</p></div>
-    <div class="round round-6"><p>Github</p></div>
-  </div>
-</div>
-
-<div class="container-technos">
-<h1>School formation</h1>
-</div>
-
-
-
 
 <div class="container4">
   <div class="card">
@@ -64,27 +44,58 @@
   </div>
 </div>
 
-  <%# <div class="card-formation">
-    <%# <div class="image-container">
-      <img src="path/to/image.jpg" alt="Image">
-    </div> %>
-    <%# <h2 class="title">2009</h2>
-    <p class="description">BAC STG</p>
+
+
+<div class="container-technos">
+<h1>Dev formation</h1>
+</div>
+
+<div class="container3">
+  <div class="round-container">
+    <h2>Mes <span>Technos</span></h2>
+    <div class="round round-1 backlight"><p>HTML</p></div>
+    <div class="round round-2 backlight"><p>CSS</p></div>
+    <div class="round round-3 backlight"><p>Rails</p></div>
+    <div class="round round-4 backlight"><p>JS</p></div>
+    <div class="round round-5 backlight"><p>Ruby</p></div>
+    <div class="round round-6 backlight"><p>Github</p></div>
   </div>
-  <div class="card-formation">
-    <%# <div class="image-container">
-      <img src="path/to/image.jpg" alt="Image">
-    </div> %>
-    <%# <h2 class="title">2009-2011</h2>
-    <p class="description">Licence 1, 2 de Droit</p>
+</div>
+
+
+<div class="container-technos">
+<h1>School formation</h1>
+</div>
+
+<div class="container4">
+  <div class="card">
+    <div class="circle"></div>
+    <div class="card-inner">
+      <p>BAC STG</p>
+      <div class="year">2009</div>
+    </div>
   </div>
-  <div class="card-formation"> %>
-    <%# <div class="image-container">
-      <img src="https://www.digischool.fr/articles/_next/image/?url=https%3A%2F%2Fwww.digischool.fr%2Farticles%2Fwp-content%2Fuploads%2F2023%2F04%2FAdobeStock_61364263-1-min-scaled.jpeg&w=3840&q=75" alt="Image">
-    </div> %>
-    <%# <h2 class="title">2011-2013</h2>
-    <p class="description">BTS Professions Immobilières</p>
-  </div> %>
+  <div class="card">
+    <div class="circle"></div>
+    <div class="card-inner">
+      <p>BTS Profession Immobilières</p>
+      <div class="year">2013</div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="circle"></div>
+    <div class="card-inner">
+      <p>Le Wagon</p>
+      <div class="year">2023</div>
+    </div>
+  </div>
+</div>
+
+<div class="container-technos">
+<h1>Mes projets</h1>
+</div>
+
+
 
 
 <%# <div class="container4">
