--- a/app/assets/stylesheets/_round_container.scss
+++ b/app/assets/stylesheets/_round_container.scss
@@ -1,8 +1,7 @@
 .round-container {
   position: relative;
-  width: 400px; /* Ajustez la largeur du conteneur selon vos besoins */
-  height: 400px; /* Ajustez la hauteur du conteneur selon vos besoins */
-  // border: solid 1px #ccc;
+  width: 400px;
+  height: 400px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -13,7 +12,7 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #0077b6;
+  background-color: black;
   position: absolute;
 }
 
@@ -56,6 +55,37 @@
   top: 86%;
   left: 26%;
   transform: translate(-50%, -50%);
+}
+
+// .round.backlight {
+//   position: relative;
+// }
+
+.round.backlight::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: linear-gradient(270deg,#0d7db9, #84caf0);
+  background-size: 200% 200%;
+  filter: blur(10px);
+  animation: animateGlow 10s ease infinite;
+  z-index: -1;
+}
+
+@keyframes animateGlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 
